added more endpoints and fixed some things, still very much needs updated inline documentation and testing
