# server.js
@@ -75,7 +75,7 @@ async function start() {
     // return a user
     app.get('/userInfo/:id', async (req, res) => {
       try {
-        const userId = req.query.user_id;
+        const userId = parseInt(req.params.id, 10);
         const result = await pool.query('SELECT * FROM users WHERE id = $1;', [userId])
         res.status(200).json(result.rows);
         console.log(`request info for user with id ` + userId);
@@ -86,7 +86,7 @@ async function start() {
     });
 
     // return users average revenue (default is all time, optional date range parameters)
-    app.get('/averageRevenue/:id', async (req, res) => {
+    app.get('/averageUserRevenue/:id', async (req, res) => {
       try {
         const userId = parseInt(req.params.id, 10);
         const { start, end } = req.query;
@@ -185,7 +185,7 @@ async function start() {
                 AVG(amount) AS averageSale
             FROM sales
             WHERE user_id = $1
-            GROUP BY date
+            GROUP BY DATE_TRUNC('month', date)
             ORDER BY date
             ;
           `;
@@ -198,7 +198,7 @@ async function start() {
           AVG(amount) AS averageSale
           FROM sales
           WHERE user_id = $1 AND date BETWEEN $2 AND $3
-          GROUP BY date
+          GROUP BY DATE_TRUNC('month', date)
           ORDER BY date          
           ;
         `;
@@ -218,16 +218,14 @@ async function start() {
 
   /*
     Group based end points
-     - Get all groups
-     - get a row\profile for a single group by id
+     -> Get all groups
+     -> get a row\profile for a single group by id
      - get the average revenue for a group by date (defaults to all time)
      - get the total revenue for a user by date (defaults to all time)
      )
   */
 
-  
-
-
+  // Get all groups
   app.get('/getallgroups', async (req, res) => {
     try {
       const result = await pool.query('SELECT * FROM groups;')
@@ -239,6 +237,153 @@ async function start() {
     }
   });
 
+  // return a specific group
+  app.get('/groupInfo/:id', async (req, res) => {
+    try {
+      const groupId = parseInt(req.params.id, 10);
+      const result = await pool.query('SELECT * FROM groups WHERE id = $1;', [userId])
+      res.status(200).json(result.rows);
+      console.log(`request info for user with id ` + userId);
+    }
+    catch (error) {
+      res.status(500).json({error: 'Database error while looking for group ${userId}'})
+    }
+  });
+
+  // return group average revenue (default is all time, optional date range parameters)
+  app.get('/averageGroupRevenue/:id', async (req, res) => {
+    try {
+      const userId = parseInt(req.params.id, 10);
+      const { start, end } = req.query;
+
+      let query;
+      let values = [];
+      //if non start or end date is provided, default to unbound (all time)
+      if (!start || !end) {  
+        query = `
+          SELECT group_id, AVG(amount) AS averageGroupRevenue
+          FROM sales s JOIN user_groups u 
+          ON s.user_id = u.user_id
+          WHERE group_id = $1
+          GROUP BY group_id
+          ;
+        `;
+        values = [userId];
+      }
+      // else use the times given to produce an average within the stated bounds
+      else {
+        query = `
+        SELECT group_id, AVG(amount) AS averageGroupRevenue
+        FROM sales s JOIN user_groups u 
+        ON s.user_id = u.user_id
+        WHERE group_id = $1 AND date BETWEEN $2 AND $3
+        GROUP BY user_id
+        ;
+      `;
+        values = [userId, start, end]; 
+      }       
+      const result = await pool.query(query, values);
+      res.status(200).json(result.rows);
+      console.log(`Querying average revenue for user ${userId}`);
+    } catch (error) {
+        console.error('Error getting user average revenue:', error);
+        res.status(500).json({ error: 'Database query failure' });
+    }
+  });
+
+  // return average sales daily time series for a user 
+  app.get('/averageDailyGroupRevenue/:id', async (req, res) => {
+    try {
+      // Get the optional user_id from the query string
+      const userId = parseInt(req.params.id, 10);
+      const { start, end } = req.query;
+      let query;
+      let values = [];
+      
+      // return group average daily revenue time series (default is all time, optional date range parameters)
+      if (!start || !end) {
+        query = `
+          SELECT DATE_TRUNC('day', date) AS date,
+              AVG(amount) AS averageSale
+          FROM sales s JOIN user_groups u 
+          ON s.user_id = u.user_id
+          WHERE group_id = $1
+          GROUP BY DATE_TRUNC('day', date)
+          ORDER BY date
+          ;
+        `;
+        values = [userId];
+      }
+      else {
+        // else use the times given to produce an average within the stated bounds
+        query = `
+        SELECT DATE_TRUNC('day', date) AS date,
+            AVG(amount) AS averageSale
+        FROM sales s JOIN user_groups u 
+        ON s.user_id = u.user_id
+        WHERE group_id = $1 AND date BETWEEN $2 AND $3
+        GROUP BY DATE_TRUNC('day', date)
+        ORDER BY date          
+        ;
+      `;
+        values = [userId, start, end]; 
+      }    
+    
+      const result = await pool.query(query, values);
+      res.status(200).json(result.rows);
+      console.log('Quering all sales');
+    } catch (error) {
+      console.error('Error getting user revenue:', error);
+      res.status(500).json({ error: 'Database query failure' });
+    }
+  });
+
+  // return average sales monthly time series for a user 
+  app.get('/averageMonthlyGroupRevenue/:id', async (req, res) => {
+    try {
+      // Get the optional user_id from the query string
+      const userId = parseInt(req.params.id, 10);
+      const { start, end } = req.query;
+      let query;
+      let values = [];
+
+      // return users average daily revenue time series (default is all time, optional date range parameters)
+      if (!start || !end) {
+        query = `
+          SELECT DATE_TRUNC('month', date) AS date,
+              AVG(amount) AS averageSale
+          FROM sales s JOIN user_groups u 
+          ON s.user_id = u.user_id
+          WHERE group_id = $1
+          GROUP BY DATE_TRUNC('month', date)
+          ORDER BY date
+          ;
+        `;
+        values = [userId];
+      }
+      else {
+        // else use the times given to produce an average within the stated bounds
+        query = `
+        SELECT DATE_TRUNC('month', date) AS date,
+        AVG(amount) AS averageSale
+        FROM sales s JOIN user_groups u 
+        ON s.user_id = u.user_id
+        WHERE group_id = $1 AND date BETWEEN $2 AND $3
+        GROUP BY DATE_TRUNC('month', date)
+        ORDER BY date 
+        ;
+      `;
+        values = [userId, start, end]; 
+      }    
+    
+      const result = await pool.query(query, values);
+      res.status(200).json(result.rows);
+      console.log('Quering all sales');
+    } catch (error) {
+      console.error('Error getting user revenue:', error);
+      res.status(500).json({ error: 'Database query failure' });
+    }
+  });  
   app.get('/getallsales', async (req, res) => {
     try {
       const result = await pool.query('SELECT * FROM sales;')
@@ -248,51 +393,7 @@ async function start() {
     catch (error) {
       res.status(500).json({error: 'Database query failure'})
     }
-  });
-
-  // app.get('/timeseries', async (req, res) => {
-  //   try {
-  //     // Get the optional user_id from the query string
-  //     const userId = req.query.user_id;
-  //     let query;
-  //     let values = [];
-    
-  //     if (userId) {
-  //       // Query for a specific user's sales aggregated by day (for example)
-  //       query = `
-  //         SELECT DATE_TRUNC('day', date) AS date,
-  //                SUM(amount) AS totalSales,
-  //                AVG(amount) AS averageSale
-  //         FROM sales
-  //         WHERE user_id = $1
-  //         GROUP BY date
-  //         ORDER BY date;
-  //       `;
-  //       values = [userId];
-  //     } else {
-  //       // Query for all users' sales aggregated by day
-  //       query = `
-  //         SELECT DATE_TRUNC('day', date) AS date,
-  //                SUM(amount) AS totalSales,
-  //                AVG(amount) AS averageSale
-  //         FROM sales
-  //         GROUP BY date
-  //         ORDER BY date;
-  //       `;
-  //     }
-    
-  //     const result = await pool.query(query, values);
-  //     res.status(200).json(result.rows);
-
-  //       // const result = await pool.query('SELECT DATE_TRUNC(\'Month\', date) AS date, SUM(amount) AS totalSales, AVG(amount) AS averageSale FROM sales GROUP BY date ORDER BY date;')
-  //       // res.status(200).json(result.rows);
-  //       // console.log('Quering all sales');
-  //   } catch (error) {
-  //     console.error('Error fetching time series data:', error);
-  //     res.status(500).json({ error: 'Database query failure' });
-  //   }
-  // });
-    
+  });    
 
   // Webinterface setup
   app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
